# limlog

./: .gitignore  Cargo.toml  README.md  arch.drawio
.github/workflows/: rust.yml
benches/: appender_benchmark.rs
examples/: log_appender.rs  log_selector.rs
src/: cache.rs  config.rs  consts.rs  error.rs  inner.rs  lib.rs  raw.rs  util.rs
src/appender/: index_writer.rs  log_writer.rs  mod.rs
src/checker/: mod.rs
src/checker/log/: index_checker.rs  log_checker.rs  mod.rs
src/formats/: log.rs  log_test.rs  mod.rs
src/garbage_collection/deletion/: gc_worker.rs
src/ops/: insert.rs  log_appender.rs  mod.rs  selector.rs
src/selector/: index_reader.rs  log_reader.rs  mod.rs
src/tests/: checker_test.rs  format.rs  log_format_test.rs  log_test.rs  mod.rs  reader_test.rs  writer_test.rs
tests/: format.rs  run.rs  validate.rs
tests/common/: mod.rs
